--- a/JavaApplication1/nbproject/project.properties
+++ b/JavaApplication1/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=datastructure
-main.class=datastructure.datastructure
+main.class=datastructure.Datastructure
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
